--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "cordova-plugin-whitelist": "^1.3.2",
     "core-js": "^2.5.7",
     "rxjs": "6.2.2",
+    "strapi-sdk-javascript": "^0.3.0",
     "sw-toolbox": "3.6.0",
     "zone.js": "^0.8.26"
   },
