--- a/src/assets/manifest.json
+++ b/src/assets/manifest.json
@@ -4,8 +4,8 @@
   "start_url": "index.html",
   "display": "standalone",
   "icons": [{
-    "src": "img/appicon.png",
-    "sizes": "512x512",
+    "src": "img/UH-eye.png",
+    "sizes": "192x192",
     "type": "image/png"
   }],
   "background_color": "#387ef5",
