--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "ionic-conference-app",
+  "name": "uh-field-service-lite",
   "version": "0.0.0",
-  "description": "Ionic Conference App",
+  "description": "UH Field Service App Lite",
   "license": "Apache-2.0",
   "scripts": {
     "ng": "ng",
@@ -17,25 +17,25 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "~6.1.0",
-    "@angular/core": "~6.1.0",
-    "@angular/forms": "~6.1.0",
-    "@angular/http": "~6.1.0",
-    "@angular/platform-browser": "~6.1.0",
-    "@angular/platform-browser-dynamic": "~6.1.0",
-    "@angular/router": "~6.1.0",
+    "@angular/common": "^6.1.10",
+    "@angular/core": "^6.1.10",
+    "@angular/forms": "^6.1.10",
+    "@angular/http": "^6.1.10",
+    "@angular/platform-browser": "^6.1.10",
+    "@angular/platform-browser-dynamic": "^6.1.10",
+    "@angular/router": "^6.1.10",
     "@ionic-native/core": "5.0.0-beta.15",
     "@ionic-native/in-app-browser": "5.0.0-beta.15",
     "@ionic-native/splash-screen": "5.0.0-beta.15",
     "@ionic-native/status-bar": "5.0.0-beta.15",
-    "@ionic/angular": "^4.0.0-beta.11",
+    "@ionic/angular": "^4.0.0-beta.12",
     "@ionic/storage": "^2.1.3",
     "cordova-android": "^7.1.1",
     "cordova-ios": "^4.5.5",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-inappbrowser": "^3.0.0",
-    "cordova-plugin-ionic-keyboard": "^2.1.2",
-    "cordova-plugin-ionic-webview": "^2.0.0",
+    "cordova-plugin-ionic-keyboard": "^2.1.3",
+    "cordova-plugin-ionic-webview": "^2.2.0",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.2",
@@ -51,15 +51,15 @@
     "@angular-devkit/core": "~0.7.1",
     "@angular-devkit/schematics": "~0.7.1",
     "@angular/cli": "~6.1.0",
-    "@angular/compiler": "~6.1.0",
-    "@angular/compiler-cli": "~6.1.0",
-    "@angular/language-service": "~6.1.0",
-    "@ionic/lab": "^1.0.0",
-    "@ionic/ng-toolkit": "^1.0.0",
-    "@ionic/schematics-angular": "^1.0.0",
-    "@types/jasmine": "~2.8.6",
-    "@types/jasminewd2": "~2.0.3",
-    "codelyzer": "^4.4.4",
+    "@angular/compiler": "^6.1.10",
+    "@angular/compiler-cli": "^6.1.10",
+    "@angular/language-service": "^6.1.10",
+    "@ionic/lab": "^1.0.11",
+    "@ionic/ng-toolkit": "^1.1.0",
+    "@ionic/schematics-angular": "^1.0.7",
+    "@types/jasmine": "^2.8.9",
+    "@types/jasminewd2": "^2.0.5",
+    "codelyzer": "^4.5.0",
     "husky": "^0.14.3",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
